--- a/admin-dashboard/sem1.subject1.html
+++ b/admin-dashboard/sem1.subject1.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="css/sb-admin-2.css">
     <link rel="stylesheet" href="css/style.css">
     <!-- <link href="vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet"> -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.2/css/jquery.dataTables.css">
 
 
     <!-- animation links -->
@@ -42,7 +43,7 @@
 
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="book-issue.html">
-                <div class="sidebar-brand-icon rotate-n-15">
+                <div class="sidebar-brand-icon">
                     <i class="fa-solid fa-user"></i>
                 </div>
                 <div class="sidebar-brand-text mx-3">Ansari Avez</div>
@@ -178,6 +179,101 @@
                     <span>Logout</span></a>
             </li>
         </ul>
+        <!-- End of Sidebar -->
+
+        <!-- Content Wrapper -->
+        <div id="content-wrapper" class="d-flex flex-column">
+
+            <!-- Main Content -->
+            <div id="content">
+
+                <!-- Topbar -->
+                <nav class="navbar navbar-expand navbar-light bg-white topbar  mb-4 static-top shadow" style="justify-content: space-between;">
+
+                    <!-- Sidebar Toggle (Topbar) -->
+                    <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
+                        <i class="fa fa-bars"></i>
+                    </button>
+                    <div>
+                        <img src="/images/book.png" class="web-logo" alt="website logo">
+                    </div>
+
+                    <!-- Topbar Search -->
+                    <form
+                        class="d-none d-sm-inline-block form-inline ms-auto  my-2 my-md-0 mw-100 navbar-search">
+                        <div class="input-group">
+                            <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
+                                aria-label="Search" aria-describedby="basic-addon2">
+                            <div class="input-group-append">
+                                <button class="btn-color" type="button">
+                                    <i class="fas fa-search fa-sm"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+
+                    <!-- Topbar Navbar -->
+                    <ul class="navbar-nav ">
+
+                        <!-- Nav Item - Search Dropdown (Visible Only XS) -->
+                        <li class="nav-item dropdown no-arrow d-sm-none">
+                            <a class="nav-link dropdown-toggle" href="#" id="searchDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <i class="fas fa-search fa-fw"></i>
+                            </a>
+                            <!-- Dropdown - Messages -->
+                            <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in"
+                                aria-labelledby="searchDropdown">
+                                <form class="form-inline mr-auto w-100 navbar-search">
+                                    <div class="input-group">
+                                        <input type="text" class="form-control bg-light border-0 small"
+                                            placeholder="Search for..." aria-label="Search"
+                                            aria-describedby="basic-addon2">
+                                        <div class="input-group-append">
+                                            <button class="btn btn-primary" type="button">
+                                                <i class="fas fa-search fa-sm"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </li>
+
+                       
+                        <div class="topbar-divider d-none d-sm-block"></div>
+
+                        <!-- Nav Item - User Information -->
+                        <li class="nav-item dropdown no-arrow">
+                            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
+                                <img class="img-profile rounded-circle"
+                                    src="img/undraw_profile.svg">
+                            </a>
+                            <!-- Dropdown - User Information -->
+                            <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
+                                aria-labelledby="userDropdown">
+                                <a class="dropdown-item" href="#">
+                                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+                                    Profile
+                                </a>
+                                <a class="dropdown-item" href="#">
+                                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
+                                    Settings
+                                </a>
+                                <a class="dropdown-item" href="#">
+                                    <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
+                                    Activity Log
+                                </a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
+                                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                                    Logout
+                                </a>
+                            </div>
+                        </li>
+
+                    </ul>
 
                 </nav>
                 <!-- End of Topbar -->
@@ -187,7 +283,7 @@
 
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h3 mb-0 text-gray-800 fw-bold">Sem-1 Subject-1 </h1>
+                        <h1 class="h3 mb-0 text-gray-800 fw-bold">Sem-1 Subject-2 </h1>
                          
                            <button class="d-none d-sm-inline-block btn btn-sm btn-color shadow-sm fs-6" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="fa-regular fa-square-plus pe-2 btn-color">
                            </i>  Add Referance</button></a>
@@ -205,26 +301,23 @@
                                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
-                                        <form action="" class="modal-form" onsubmit=" return Video() && Pdf()">
+                                        <form action="" class="modal-form">
                                         <div class="row">
                                             <div class="col-lg-6 py-2">
                                                 <label for="details" class="label-i"> video title</label>
-                                                <input type="text" class="modal-input" id="video-1" placeholder="Enter video title">
+                                                <input type="text" class="modal-input" placeholder="Enter video title">
                                              </div>
                                              <div class="col-lg-6 py-2">
                                                 <label for="details" class="label-i"> Notes title</label>
-                                                <input type="text" class="modal-input" id="pdf-h" placeholder="Enter Notes title">
+                                                <input type="text" class="modal-input"  placeholder="Enter Notes title">
                                              </div>
                                           <div class="col-lg-6 py-2">
                                           <label for="details" class="label-i">Add video</label>
-                                          <input type="file" class="modal-input " id="video" accept="video/*" >
-                                          <span id="vid" class="text-danger fw-semibold"></span>
+                                          <input type="file" class="modal-input " id="video" >
                                           </div>
                                           <div class="col-lg-6 py-2">
                                           <label for="details" class="label-i">Add Notes</label>
-                                          <input type="file" class="modal-input" id="pdf" multiple>
-                                          <span id="pd" class="text-danger fw-semibold"></span>
-
+                                          <input type="file" class="modal-input" multiple>
                                           </div>
                                           <div class="col-lg-12 py-2">
                                           <label for="details" class="label-i">Discription</label>
@@ -267,7 +360,7 @@
                             <div class="col-lg-3">
                                 <div class="card notes" style="width: 18rem;">
                                     <video width="400" height="200" controls class="card-img-top">
-                                        <source src="/images/imagesAKI Certifate.mp4"type="video/mp4"></video>
+                                        <source src="/images/AKI Certifate.mp4"type="video/mp4"></video>
                                     <div class="card-body">
                                       <h5 class="card-title">sic practical </h5>
                                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -295,7 +388,7 @@
     <!-- End of Page Wrapper -->
 
     <!-- Scroll to Top Button-->
-    <a class="scroll-to-top rounded" href="#page-top" >
+    <a class="scroll-to-top rounded" href="#page-top">
         <i class="fas fa-angle-up"></i>
     </a>
 
