--- a/admin-dashboard/sem2.subject2.html
+++ b/admin-dashboard/sem2.subject2.html
@@ -43,7 +43,7 @@
 
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="book-issue.html">
-                <div class="sidebar-brand-icon rotate-n-15">
+                <div class="sidebar-brand-icon">
                     <i class="fa-solid fa-user"></i>
                 </div>
                 <div class="sidebar-brand-text mx-3">Ansari Avez</div>
