--- a/admin-dashboard/book-issue.html
+++ b/admin-dashboard/book-issue.html
@@ -302,40 +302,48 @@
                                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
-                                        <form action="" class="modal-form">
+                                        <form action="" class="modal-form" onsubmit="return validate2()">
                                         <div class="row">
                                         
                                           <div class="col-lg-6 py-2">
                                           <label for="details" class="label-m">Student Name</label>
-                                          <input type="text" class="modal-input" placeholder="Enter the student name">
+                                          <input type="text" class="modal-input" id="s-name1" placeholder="Enter the student name">
+                                          <span class="fw-semibold text-danger" id="s-name"></span>
                                           </div>
                                           <div class="col-lg-6 py-2">
                                           <label for="details" class="label-m">Student id</label>
-                                          <input type="text" class="modal-input" placeholder="Enter the student id">
+                                          <input type="text" class="modal-input" id="s-id1" placeholder="Enter the student id">
+                                          <span class="fw-semibold text-danger" style="text-transform: none;" id="s-id"></span>
                                           </div>
                                           <div class="col-lg-6 py-2">
                                           <label for="details" class="label-m">Phone</label>
-                                          <input type="number" class="modal-input" placeholder="Enter student phone number">
+                                          <input type="text" class="modal-input" id="s-num1" placeholder="Enter student phone number">
+                                          <span class="fw-semibold text-danger" id="s-num"></span>
                                           </div>
                                           <div class="col-lg-6 py-2">
                                           <label for="details" class="label-m">Address</label>
-                                          <input type="text" class="modal-input" placeholder="Enter the student address">
+                                          <input type="text" class="modal-input" id="s-add1" placeholder="Enter the student address">
+                                          <span class="fw-semibold text-danger" id="s-add"></span>
                                           </div>
                                           <div class="col-lg-6 py-2">
                                           <label for="details" class="label-m">Book</label>
-                                          <input type="text" class="modal-input" placeholder="Enter the book name">
+                                          <input type="text" class="modal-input" id="b-name1" placeholder="Enter the book name">
+                                          <span class="fw-semibold text-danger" id="b-name"></span>
                                           </div>
                                           <div class="col-lg-6 py-2">
                                           <label for="details" class="label-m">Book id</label>
-                                          <input type="text" class="modal-input" placeholder="Enter the book id">
+                                          <input type="text" class="modal-input" id="b-id1" placeholder="Enter the book id">
+                                          <span class="fw-semibold text-danger" id="b-id"></span>
                                           </div>
                                           <div class="col-lg-6 py-2">
                                            <label for="details" class="label-m">Issued date</label>
-                                          <input type="date" class="modal-input text-uppercase">
+                                          <input type="date" class="modal-input text-uppercase" id="issu1">
+                                          <span class="fw-semibold text-danger" id="issu"></span>
                                           </div>
                                           <div class="col-lg-6 py-2">
                                            <label for="details" class="label-m">Return date</label>
-                                          <input type="date" class="modal-input text-uppercase">
+                                          <input type="date" class="modal-input text-uppercase" id="retu">
+                                          <span class="fw-semibold text-danger" id="ret"></span>
                                           </div>
                                           <div class="modal-footer">
                                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -405,25 +413,8 @@
         <i class="fas fa-angle-up"></i>
     </a>
 
-    <!-- Logout Modal-->
-    <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
-                </div>
-                <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-                <div class="modal-footer">
-                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="login.html">Logout</a>
-                </div>
-            </div>
-        </div>
-    </div>
+   
+   
 
     <!-- Bootstrap core JavaScript-->
     <script src="vendor/jquery/jquery.min.js"></script>
