--- a/admin-dashboard/sem1.subject1.html
+++ b/admin-dashboard/sem1.subject1.html
@@ -301,21 +301,25 @@
                                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
-                                        <form action="" class="modal-form" onsubmit="Video() && Pdf(); return false">
+                                        <form action="" class="modal-form" onsubmit="return Video() && Pdf();">
                                         <div class="row">
                                             <div class="col-lg-6 py-2">
                                                 <label for="details" class="label-i"> video title</label>
-                                                <input type="text" class="modal-input" placeholder="Enter video title">
+                                                <input type="text" class="modal-input"vid="vid-t1" placeholder="Enter video title">
+                                                <span class="fw-semibold text-danger" id="vid-t"></span>
                                              </div>
                                              <div class="col-lg-6 py-2">
                                                 <label for="details" class="label-i"> Notes title</label>
-                                                <input type="text" class="modal-input"  placeholder="Enter Notes title">
+                                                <input type="text" class="modal-input" id="not-t1"  placeholder="Enter Notes title">
+                                                <span class="fw-semibold text-danger" id="not-t"></span>
                                              </div>
                                           <div class="col-lg-6 col-md-6 py-2">
                                           <label for="details" class="label-i">Add video</label>
                                           <input type="file" class="modal-input custom" id="video" >
                                           <span><i class="fa-sharp fa-solid fa-cloud-arrow-up icons"></i></span>
                                           <span class="text-danger fw-semibold " id="vid"></span>
+                                          <span class="text-danger fw-semibold " id="vid1"></span>
+
                                           </div>
                                           <div class="col-lg-6 col-md-6 py-2">
                                           <label for="details" class="label-i">Add Notes</label>
@@ -396,25 +400,7 @@
         <i class="fas fa-angle-up"></i>
     </a>
 
-    <!-- Logout Modal-->
-    <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
-                </div>
-                <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-                <div class="modal-footer">
-                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="login.html">Logout</a>
-                </div>
-            </div>
-        </div>
-    </div>
+   
 
     <!-- Bootstrap core JavaScript-->
     <script src="vendor/jquery/jquery.min.js"></script>
